// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionHeader > snapshots > matches snapshot with actions 1`] = `
<div>
  <header
    class="flex flex-col md:flex-row md:flex-wrap md:items-center gap-1_5 bg-neutral-0 w-full pt-6 md:pt-0 md:pb-2_5"
  >
    <div
      class="flex flex-col gap-0_25 grow min-w-0"
    >
      <h1
        class="text-h4 leading-h4 font-bold"
        style="color: var(--color-neutral-1000);"
      >
        Test Title
      </h1>
    </div>
    <div
      class="flex gap-0_75 shrink-0 self-start md:self-auto"
    >
      <button>
        Action
      </button>
    </div>
  </header>
</div>
`;

exports[`SectionHeader > snapshots > matches snapshot with title and description 1`] = `
<div>
  <header
    class="flex flex-col md:flex-row md:flex-wrap md:items-center gap-1_5 bg-neutral-0 w-full pt-6 md:pt-0 md:pb-2_5"
  >
    <div
      class="flex flex-col gap-0_25 grow min-w-0"
    >
      <h1
        class="text-h4 leading-h4 font-bold"
        style="color: var(--color-neutral-1000);"
      >
        Test Title
      </h1>
      <p
        class="text-body-small leading-body-small font-normal"
        style="color: var(--text-secondary);"
      >
        Test description
      </p>
    </div>
  </header>
</div>
`;

exports[`SectionHeader > snapshots > matches snapshot with title only 1`] = `
<div>
  <header
    class="flex flex-col md:flex-row md:flex-wrap md:items-center gap-1_5 bg-neutral-0 w-full pt-6 md:pt-0 md:pb-2_5"
  >
    <div
      class="flex flex-col gap-0_25 grow min-w-0"
    >
      <h1
        class="text-h4 leading-h4 font-bold"
        style="color: var(--color-neutral-1000);"
      >
        Test Title
      </h1>
    </div>
  </header>
</div>
`;
